--- a/package.json
+++ b/package.json
@@ -8,7 +8,15 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "bootstrap": "^4.4.1",
+    "chi-squared": "^1.1.0",
+    "inv-chisquare-cdf": "^1.0.1",
+    "jstat": "^1.9.2",
+    "node-sass": "^4.13.1",
+    "react-bootstrap": "^1.0.0",
+    "simple-statistics": "^7.0.8",
+    "react-router-dom": "^5.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
