--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
   "devDependencies": {
     "gh-pages": "^2.2.0"
   },
-  "homepage": "http://SalvadorRomeroB.github.io/Proyecto-Simulacion"
+  "homepage": "http://salvadorromerob.github.io/proyecto-simulacion"
 }
